--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
   "name": "anavaldes-md-links",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "description": "Encuentra links en archivos .md",
+  "author": "Ana Maria Valdes",
   "type": "module",
   "bin": {
     "mdLinks": "cli.js"
+  },
+  "keywords": [
+    "node.js",
+    "http",
+    "mdlinks",
+    "project"
+  ],
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnaMariaValdesChile/DEV007-md-links"
   },
   "jest": {
     "verbose": true
