--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Encuentra links en archivos .md",
   "author": "Ana Maria Valdes",
   "type": "module",
+  "main": "index.js",
   "bin": {
     "mdLinks": "cli.js"
   },
